--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=">
+  <title></title>
+</head>
+<body>
+  <h1> Joanna Hou's Website </h1>
+</body>
+  
+<style>
+  body{
+  background-color:lightcyan
+}
+h1{
+  color: lightblue;
+  text-align: center;
+  font-size: 70px;
+}
+  </style>
+</html>
