--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 h1{
   color: lightblue;
   text-align: center;
-  font-family: 'Shadows Into Light';
+  font-family: 'PT Sans Narrow', Sans-Serif!important;
   font-size: 70px;
 }
   </style>
