--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1> Joanna Hou's Website </h1>
+
+ <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
+
+  
 </body>
   
 <style>
