--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
  <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
 
+<iframe src="https://scratch.mit.edu/projects/425917488/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   
 </body>
   
