--- a/apps.html
+++ b/apps.html
@@ -3,7 +3,7 @@
   <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href= "apps.html"> apps </a> 
-    <li><a href= "publications.html"> apps </a>
+    <li><a href= "publications.html"> publications </a>
 </body> 
 
 <style> 
