--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1> Joanna Hou's Website </h1>
+  
+  <a href="test.html"> test page! </a>
 
  <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
 
@@ -22,6 +24,21 @@ h1{
   text-align: center;
   font-family: 'PT Sans Narrow', Sans-Serif!important;
   font-size: 70px;
+}
+  ul{
+  list-style-type: none;
+  display: inline;
+  background-color: teal; 
+  width: 200%;
+  
+}
+li{
+  display: inline;
+  padding: 16px 50px;
+  text-decoration: none; 
+}
+li a:hover{
+  background-color: antiquewhite
 }
   </style>
 </html>
