--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <h1> Joanna Hou's Website </h1>
   
   <a href="test.html"> test page! </a>
+  
+  <ul>
+    <li><a href="index.html"> home</a></li>
+    <li><a href= "apps.html"> apps </a> 
+    <li><a href= "publications.html"> publications </a>
+  </ul>
 
  <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
 
