--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href= "apps.html"> apps </a> 
-    <li><a href= "publications.html"> publications </a>
+    <li><a href= "https://muckrack.com/joanna-hou-1"> publications </a>
   </ul>
 
  <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
