--- a/apps.html
+++ b/apps.html
@@ -7,6 +7,10 @@
   </ul>
 </body> 
 
+<iframe src="https://scratch.mit.edu/projects/425917488/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/4jCI1Ou-v6FNoaDJ_2aSysWkfxRkqefYCZ-Ynxgm_e0/embed"></iframe>
+</body>
+  
 <style> 
 ul{
   list-style-type: none;
