--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1> Joanna Hou's Website </h1>
-    
+<div class="pig">  
+  <img src = https://img.huffingtonpost.com/asset/5cd361592300003100b77473.jpeg?ops=scalefit_720_noupscale&format=webp>
+</div> 
   <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href= "apps.html"> apps </a> 
@@ -20,8 +22,17 @@
 </body>
   
 <style>
-  body{
+  body{   
   background-color:lightcyan
+  div.pig {
+  background-color: blue;
+  position: sticky;
+  text-align: center;
+}
+
+img:hover{
+  opacity: 50%
+}
 }
 h1{
   color: lightblue;
