--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
   <h1> Joanna Hou's Website </h1>
+<div class= "snail">
   <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href= "apps.html"> apps </a> 
     <li><a href= "https://muckrack.com/joanna-hou-1"> publications </a>
   </ul>
+</div>
+  
+div.snail {
+  background-color: aqua;
+  position: sticky;
+  text-align: center;
+  top: 0;
+  left: 25%;
+}
 
  <center> <img src="joannahou.png" alt="my personal artifcat" width="400">
 
