--- a/apps.html
+++ b/apps.html
@@ -1,12 +1,20 @@
 <html>
+  <head>
+  <link rel= "stylesheet" href= "style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=">
+  <title></title>
+</head>
 <body>
+  <h1> Joanna Hou's Website </h1>
+<div class= "snail">
   <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href= "apps.html"> apps </a> 
     <li><a href= "https://muckrack.com/joanna-hou-1"> publications </a>
   </ul>
-</body> 
-
+</div>
+  
 <iframe src="https://scratch.mit.edu/projects/425917488/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/4jCI1Ou-v6FNoaDJ_2aSysWkfxRkqefYCZ-Ynxgm_e0/embed"></iframe>
 </body>
