--- a/apps.html
+++ b/apps.html
@@ -19,8 +19,17 @@
 <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/4jCI1Ou-v6FNoaDJ_2aSysWkfxRkqefYCZ-Ynxgm_e0/embed"></iframe>
 </body>
   
-<style> 
-ul{
+<style>
+  body{   
+  background-color:lightcyan
+}
+h1{
+  color: lightblue;
+  text-align: center;
+  font-family: 'PT Sans Narrow', Sans-Serif!important;
+  font-size: 70px;
+}
+  ul{
   list-style-type: none;
   display: inline;
   background-color: teal; 
@@ -35,4 +44,4 @@ li{
 li a:hover{
   background-color: antiquewhite
 }
-</style>
+  </style>
